# fullstack_blog_on_django-vue

backend/: db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/blog/: admin.py  models.py  schema.py
backend/blog/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: main.js
