[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yurishtro92 <yuri.schtro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0.2"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
strawberry-graphql-django = "^0.3.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
